# crosscompute-macros

./: README.md  pyproject.toml  setup.cfg
sources/crosscompute_macros/: abstract.py  concurrency.py  csv.py  date.py  datetime.py  disk.py  error.py  iterable.py  jinja.py  log.py  markdown.py  msgpack.py  package.py  process.py  pydantic.py  security.py  shapely.py  sqlalchemy.py  starlette.py  text.py  web.py  yaml.py
tests/: concurrency_test.py  disk_test.py  text_test.py  yaml_test.py
