[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crosscompute-macros"
version = "0.1.2.1"
dependencies = []
requires-python = ">= 3.10"
authors = [
    {name = "Roy Hyunjin Han", email = "rhh@crosscompute.com"},
]
maintainers = []
description = "Reusable classes and functions needed by crosscompute packages"
readme = "README.md"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
disk = ["aiofiles >= 25.1.0"]
jinja = ["jinja2"]
markdown = ["markdown2"]
msgpack = ["msgpack"]
security = ["argon2-cffi"]
shapely = ["aiofiles", "shapely"]
sqlalchemy = ["sqlalchemy"]
starlette = ["starlette"]
web = ["aiofiles", "aiohttp[speedups] >= 3.13.5"]
yaml = ["ruamel.yaml", "ruamel.yaml.bytes"]
development = ["pre-commit"]
test = ["crosscompute_macros[disk]", "pytest-asyncio", "pytest-cov", "pytest-xdist"]
all = ["crosscompute_macros[disk,iterable,jinja,log,markdown,msgpack,security,shapely,sqlalchemy,starlette,web,yaml]"]

[project.urls]
# Homepage = ""
# Documentation = ""
Repository = "https://github.com/crosscompute/crosscompute-macros"
Issues = "https://github.com/crosscompute/crosscompute-macros/issues"
# Changelog = ""

[tool.hatch.build.targets.wheel]
packages = ["sources/crosscompute_macros"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--cov=crosscompute_macros --cov-report term-missing"
